# Novex

./: .env.example  .gitignore  Cargo.toml  NOTICE  README.md
backend/: .env.example  Cargo.toml  README.md
backend/migration_sources/: README.md
backend/migration_sources/scheduler/schema/: 202605300001_create_scheduler.sql
backend/migration_sources/system/patch/: 202605290004_add_join_reverse_indexes.sql
backend/migration_sources/system/seed/: 202605290002_seed_sys_core.sql
backend/migrations/: 202605290001_create_sys_core.sql  202605290003_patch_seed_permissions.sql  202605290005_add_role_status.sql  202606050001_seed_ai_foundation_menus.sql  202606050003_seed_ai_knowledge_permissions.sql  202606050006_create_ai_capability_registry.sql  202606050007_seed_ai_capability_permissions.sql  202606050010_create_ai_eval_runtime.sql  202606050011_seed_ai_eval_permissions.sql  202606050012_seed_ai_template_permissions.sql  202606050013_seed_ai_model_runtime_permissions.sql  202606050014_create_foundation_control_plane.sql  202606050015_create_ai_model_registry.sql  202606050016_sanitize_model_registry_masked_credentials.sql  202606050020_create_ai_document_block.sql  202606060006_create_ai_connector_credential.sql  202606060007_seed_github_identity_provider.sql  202606060008_create_ai_memory.sql  202606060009_promote_feishu_tool_connector.sql  202606060012_seed_template_capability_aliases.sql  202606060013_create_ai_customer_package.sql  202606090001_seed_chat_flow_skill_prompt_rules.sql  202606090002_seed_skill_import_permission.sql  202606090005_seed_ai_studio_permissions.sql  202606100001_create_ai_eval_task_queue.sql  202606160001_create_ai_mcp_gateway.sql  202606160002_create_ai_rollout.sql  202606160004_seed_ai_notebook_permissions.sql  202606160005_seed_customer_service_tools.sql  202606160006_seed_customer_service_template.sql  202606170004_create_ai_model_ops_alert.sql  202606170006_create_ai_agent_run_queue.sql  202606170010_seed_ai_model_provider_call_lease_cancel_permission.sql  202606180001_create_ai_mcp_oauth_persistence.sql  202606180003_create_ai_agent_turn_item.sql  202606200001_remove_ai_template_menu.sql  202606200003_drop_retired_template_delivery_tables.sql  202606200004_rename_chat_flow_app_code_to_notebooklm.sql
backend/src/: lib.rs  main.rs
backend/src/application/: mod.rs  user_profile_service.rs
backend/src/application/ai/: agent_queue_runtime.rs  agent_service.rs  agent_tool_executor.rs  agent_tool_io_runtime.rs  capability_service.rs  chat_flow_service.rs  customer_service_agent.rs  eval_queue_runtime.rs  eval_service.rs  eval_worker_runtime.rs  foundation_service.rs  integration_service.rs  knowledge_service.rs  mcp_oauth_token_dispatch.rs  mcp_stdio_process.rs  memory_service.rs  mod.rs  model_provider_transport.rs  model_service.rs  notebook_service.rs  parser_queue_runtime.rs  research_radar_service.rs  studio_service.rs  template_service.rs  training_service.rs  trigger_service.rs
backend/src/application/auth/: service.rs
backend/src/application/data_scope/: resolver.rs
backend/src/application/identity/: mod.rs  oauth_service.rs  provider_service.rs
backend/src/application/monitor/: log_service.rs  mod.rs  online_service.rs
backend/src/application/rbac/: service.rs
backend/src/application/scheduler/: cron.rs  executor.rs  http_safety.rs  mod.rs  runtime.rs  service.rs
backend/src/application/system/: client_service.rs  dept_service.rs  dict_service.rs  mod.rs  (+7 more)
backend/src/domain/: mod.rs
backend/src/infrastructure/: db.rs  mod.rs
backend/src/shared/: config.rs  error.rs  id.rs  mod.rs  pagination.rs  query.rs  response.rs
backend/tests/: live_rag_e2e.rs  migration_sources.rs  poc_ports.rs
(+957 files in other folders)
