[workspace]
members = [
    "backend",
    "crates/novex-ai-core",
    "crates/novex-agent-protocol",
    "crates/novex-agent-runtime",
    "crates/novex-approval-review",
    "crates/novex-model",
    "crates/novex-rag",
    "crates/novex-agent",
    "crates/novex-tools",
    "crates/novex-connectors",
    "crates/novex-mcp",
    "crates/novex-plugin",
    "crates/novex-skill",
    "crates/novex-trigger",
    "crates/novex-memory",
    "crates/novex-eval",
    "crates/novex-trace",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
novex-ai-core = { path = "crates/novex-ai-core" }
novex-agent = { path = "crates/novex-agent" }
novex-agent-protocol = { path = "crates/novex-agent-protocol" }
novex-agent-runtime = { path = "crates/novex-agent-runtime" }
novex-approval-review = { path = "crates/novex-approval-review" }
novex-connectors = { path = "crates/novex-connectors" }
novex-eval = { path = "crates/novex-eval" }
novex-mcp = { path = "crates/novex-mcp" }
novex-memory = { path = "crates/novex-memory" }
novex-model = { path = "crates/novex-model" }
novex-plugin = { path = "crates/novex-plugin" }
novex-rag = { path = "crates/novex-rag" }
novex-skill = { path = "crates/novex-skill" }
novex-tools = { path = "crates/novex-tools" }
novex-trigger = { path = "crates/novex-trigger" }
novex-trace = { path = "crates/novex-trace" }
serde = { version = "1", features = ["derive"] }
