[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"
default-run = "backend-rust"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
futures-lite = "2"
jsonwebtoken = "9"
lapin = "2"
mime_guess = "2"
novex-agent.workspace = true
novex-agent-protocol.workspace = true
novex-agent-runtime.workspace = true
novex-ai-core.workspace = true
novex-approval-review.workspace = true
novex-connectors.workspace = true
novex-eval.workspace = true
novex-mcp.workspace = true
novex-memory.workspace = true
novex-model.workspace = true
novex-plugin.workspace = true
novex-provider-client.workspace = true
novex-rag.workspace = true
novex-skill.workspace = true
novex-tools.workspace = true
novex-trace.workspace = true
novex-trigger.workspace = true
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2.4.2"

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
